@@ -1155,6 +1155,13 @@ Usage    : CHANT "RESTORE MANA" [TARGET NAME]\n\r\
 Example  : chant "restore mana" bob\n\r\
 This chant quite simply transfers 50 points of mana from the source to the target.
 
+CHANT_RESUSCITATEANIMAL=CHANT_RESUSCITATE_ANIMAL
+CHANT_RESUSCITATE_ANIMA=<ABILITY>\
+Usage    : CHANT "RESUSCITATE ANIMAL" [TARGET NAME]\n\r\
+Example  : chant "resuscitate animal" fox\n\r\
+If the ranger witnesses the dead of a follower animal, then this chant will restore \
+life to the fallen companion.
+
 CHANT_ROCKFEET=<ABILITY>\
 Usage    : CHANT "ROCKFEET" [TARGET NAME]\n\r\
 Example  : chant "rockfeet" orc\n\r\
